--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,17 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
+    <repositories>
+        <repository>
+            <id>central</id>
+            <url>http://uk.maven.org/maven2/</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>abcd</id>
+            <url>http://maven.aliyun.com/nexus/content/groups/public//</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -55,6 +66,12 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>2.2.3.RELEASE</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
